# scr_shot

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-TW.md
src/: app.rs  app_state.rs  clipboard.rs  config.rs  event.rs  hotkey.rs  i18n.rs  icon.rs  main.rs  menu_icon.rs  theme.rs  tray.rs  win32_thread.rs
src/capture/: capturer.rs  mod.rs  overlay.rs  screen.rs
src/editor/: canvas.rs  mod.rs  panel.rs  tool.rs  tools.rs  window.rs
src/output/: clipboard.rs  file.rs
