[package]
name = "srcshot"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.30"
eframe = "0.30"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Clipboard",
    "Win32_System_LibraryLoader",
]}
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
