[package]
name = "srcshot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "srcshot"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = "1"

[profile.release]
lto = true
opt-level = 3

[package.metadata.winres]
FileDescription = "srcshot"
